--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,3 +15,29 @@
     position: absolute;
     transform: translateX(-50%);
 }
+
+.diningSwiper .swiper-button-next::after,
+.diningSwiper .swiper-button-prev::after {
+    font-size: 15px;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+}
+
+.diningSwiper .swiper-button-prev {
+    top: 50%;
+    background: white;
+    border-radius: 100%;
+    padding: 5px !important;
+    width: 30px;
+    height: 30px;
+}
+
+.diningSwiper .swiper-button-next {
+    top: 50%;
+    background: white;
+    border-radius: 100%;
+    padding: 5px !important;
+    width: 30px;
+    height: 30px;
+}
